--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/geo-icon.svg" />
+    <link rel="alternate icon" href="/geo-icon.svg" />
+    <link rel="mask-icon" href="/geo-icon.svg" color="#4CAF50" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Geo-Asystent AI - Inteligentny asystent GIS do analizy danych przestrzennych" />
+    <meta name="keywords" content="GIS, mapa, działki, budynki, GPZ, analiza przestrzenna, AI" />
+    <title>Geo-Asystent AI</title>
   </head>
   <body>
     <div id="root"></div>
